Fix jumpiness with `overflow:hidden` due to `inline-block`

--- a/assets/src/stories-editor/blocks/amp-story-post-author/edit.css
+++ b/assets/src/stories-editor/blocks/amp-story-post-author/edit.css
@@ -1,3 +1,6 @@
+.wp-block[data-type="amp/amp-story-post-author"] {
+	line-height: 0;
+}
 .wp-block[data-type="amp/amp-story-post-author"] .wp-block-amp-amp-story-post-author {
 	margin: 0;
 	padding: 7px !important;
