--- a/assets/src/stories-editor/blocks/amp-story-post-title/edit.css
+++ b/assets/src/stories-editor/blocks/amp-story-post-title/edit.css
@@ -1,3 +1,7 @@
+.wp-block[data-type="amp/amp-story-post-title"] {
+	line-height: 0;
+}
+
 .wp-block[data-type="amp/amp-story-post-title"] .wp-block-amp-amp-story-post-title {
 	margin: 0;
 	padding: 7px !important;
