--- a/assets/src/stories-editor/blocks/amp-story-text/edit.css
+++ b/assets/src/stories-editor/blocks/amp-story-text/edit.css
@@ -38,11 +38,13 @@
 
 .editor-styles-wrapper #amp-story-editor .wp-block .wp-block[data-type="amp/amp-story-text"] {
 	width: initial;
+	line-height: 0;
 }
 
 .wp-block[data-type="amp/amp-story-text"] .block-editor-rich-text__editable,
 div[data-type="amp/amp-story-page"] .block-editor-inner-blocks .block-editor-block-list__block-edit {
 	display: inline-block;
+	line-height: 1.15;
 }
 
 .with-line-height .wp-block-amp-story-text {
